WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242774
fast/events/ios/blur-and-prompt-after-focus.html consistently hangs with a 1-second IPC deadlock
https://bugs.webkit.org/show_bug.cgi?id=242774
Summary
fast/events/ios/blur-and-prompt-after-focus.html consistently hangs with a 1-...
Wenson Hsieh
Reported
2022-07-14 16:20:19 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2022-07-14 17:21:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2435
EWS
Comment 2
2022-07-15 07:00:49 PDT
Committed
252502@main
(64a9834a301f): <
https://commits.webkit.org/252502@main
> Reviewed commits have been landed. Closing PR #2435 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-07-15 07:01:17 PDT
<
rdar://problem/97072611
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug