fast/events/ios/blur-and-prompt-after-focus.html consistently hangs with a 1-second IPC deadlock https://bugs.webkit.org/show_bug.cgi?id=242774

Reviewed by Ryosuke Niwa.

While investigating webkit.org/b/242753, I noticed that the titular layout test (which was
originally created to exercise a crash) triggers a consistent autocorrection context request
deadlock, before passing; this happens because the page triggers a modal alert at the same time as
the UI process requests an autocorrection context from the web page.

The change in `237399@main` was intended to mitigate this kind of scenario; however, it falls just
short of avoiding a deadlock on this particular test case, because we don't preemptively send an
autocorrection context before running the modal prompt. This is because the web page
programmatically blurs the focused element before prompting, so `m_focusedElement` is null).

To extend the mitigation in `237399@main` to address this scenario as well, we simply remove the
checks against a null `m_focusedElement` that prevent us from trying to send autocorrection context
before running the modal prompt. Instead, make `autocorrectionContext()` check for a null
`m_focusedElement` or non-editable selection, and bail early with an empty autocorrection context in
those cases. Doing so allows us to preemptively send a blank autocorrection context to the UI
process, which (1) correctly reflects the state of the web process, and (2) is sufficient to avoid
deadlocking.

* LayoutTests/fast/events/ios/blur-and-prompt-after-focus.html:

Adjust the test case to fail without this fix, by supplying the `ignoreSynchronousMessagingTimeouts`
test option.

* Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::autocorrectionContext):
(WebKit::WebPage::prepareToRunModalJavaScriptDialog):

Canonical link: https://commits.webkit.org/252502@main